chore: use image service to fetch images by owner & tags
